# chsrc-win

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: linux-x64.yml
env/: install.bat  uninstall.bat
icon/: convert.bat
include/: chsrc.h  dmfix_win_console.h  source.h  xy.h
src/: chsrc.c  chsrc.rc
